--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -17,14 +17,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xf7-O4-dVb">
-                                <rect key="frame" x="0.0" y="44" width="414" height="618"/>
+                                <rect key="frame" x="60" y="194" width="294" height="400"/>
                                 <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="A3D-Ue-qVt"/>
+                                </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="BSc-ns-hmv" appends="YES" id="WLd-GN-mUF"/>
                                 </connections>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kE4-9A-kfT">
-                                <rect key="frame" x="91.5" y="742" width="37" height="34"/>
+                                <rect key="frame" x="91.666666666666671" y="674" width="37.000000000000014" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="進む">
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
@@ -34,7 +37,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uzW-58-JAf">
-                                <rect key="frame" x="188.5" y="742" width="37" height="34"/>
+                                <rect key="frame" x="188.66666666666666" y="674" width="37" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="戻る"/>
                                 <connections>
@@ -42,7 +45,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ezq-Az-nY9">
-                                <rect key="frame" x="285.5" y="742" width="79" height="34"/>
+                                <rect key="frame" x="285.66666666666669" y="674" width="79" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="再生/停止"/>
                                 <connections>
@@ -53,18 +56,16 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ezq-Az-nY9" secondAttribute="trailing" symbolic="YES" id="55m-zT-rMQ"/>
                             <constraint firstItem="uzW-58-JAf" firstAttribute="top" secondItem="xf7-O4-dVb" secondAttribute="bottom" constant="80" id="6Un-mT-ZnB"/>
                             <constraint firstItem="Ezq-Az-nY9" firstAttribute="leading" secondItem="uzW-58-JAf" secondAttribute="trailing" constant="60" id="DCC-u0-4b8"/>
                             <constraint firstItem="kE4-9A-kfT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91.5" id="DpT-Kk-S8V"/>
                             <constraint firstItem="uzW-58-JAf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OWs-fC-X4o"/>
                             <constraint firstItem="uzW-58-JAf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="kE4-9A-kfT" secondAttribute="trailing" constant="8" symbolic="YES" id="UGG-dG-8zx"/>
-                            <constraint firstItem="xf7-O4-dVb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="gFN-Sh-Z1e"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xf7-O4-dVb" secondAttribute="bottom" constant="200" id="j9k-eC-sbe"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xf7-O4-dVb" secondAttribute="trailing" id="lYv-Y1-7ob"/>
+                            <constraint firstItem="xf7-O4-dVb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="XmM-Ft-5GV"/>
+                            <constraint firstItem="xf7-O4-dVb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="fTT-KY-7Rf"/>
                             <constraint firstItem="uzW-58-JAf" firstAttribute="top" secondItem="kE4-9A-kfT" secondAttribute="top" id="ppN-3m-pOi"/>
                             <constraint firstItem="Ezq-Az-nY9" firstAttribute="top" secondItem="kE4-9A-kfT" secondAttribute="top" id="uZa-gq-33k"/>
-                            <constraint firstItem="xf7-O4-dVb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yse-sq-hkH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xf7-O4-dVb" secondAttribute="trailing" constant="60" id="xOn-bS-evO"/>
                         </constraints>
                     </view>
                     <connections>
@@ -88,48 +89,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="bZ5-gd-z4p">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="624"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EZM-jo-dH2">
-                                        <rect key="frame" x="50" y="50" width="314" height="524"/>
-                                    </imageView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="EZM-jo-dH2" firstAttribute="leading" secondItem="TA8-Fh-45Y" secondAttribute="leading" constant="50" id="1Wo-xh-l0t"/>
-                                    <constraint firstItem="TA8-Fh-45Y" firstAttribute="trailing" secondItem="EZM-jo-dH2" secondAttribute="trailing" constant="50" id="3rO-WA-tza"/>
-                                    <constraint firstAttribute="bottom" secondItem="EZM-jo-dH2" secondAttribute="bottom" constant="50" id="9I6-Ri-3RN"/>
-                                    <constraint firstItem="EZM-jo-dH2" firstAttribute="top" secondItem="TA8-Fh-45Y" secondAttribute="top" constant="50" id="EX4-Mh-LTD"/>
-                                    <constraint firstItem="EZM-jo-dH2" firstAttribute="centerY" secondItem="bZ5-gd-z4p" secondAttribute="centerY" id="cR9-g5-aTE"/>
-                                    <constraint firstAttribute="trailing" secondItem="EZM-jo-dH2" secondAttribute="trailing" constant="50" id="iyv-Sl-WWI"/>
-                                </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="If4-QQ-7Fv"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="TA8-Fh-45Y"/>
-                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f3J-LF-3Nc">
-                                <rect key="frame" x="188.5" y="680" width="37" height="34"/>
+                                <rect key="frame" x="188.66666666666666" y="680" width="37" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="戻る"/>
                                 <connections>
                                     <segue destination="tPJ-A6-YoM" kind="unwind" unwindAction="unwind:" id="fya-iH-Frm"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="89v-oi-KBE">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="580"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="svx-yX-JrM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bZ5-gd-z4p" firstAttribute="leading" secondItem="svx-yX-JrM" secondAttribute="leading" id="4gS-BH-Ncb"/>
+                            <constraint firstItem="89v-oi-KBE" firstAttribute="leading" secondItem="svx-yX-JrM" secondAttribute="leading" id="1Nj-7y-4UK"/>
+                            <constraint firstItem="89v-oi-KBE" firstAttribute="top" secondItem="svx-yX-JrM" secondAttribute="top" id="5Tv-Fv-oUw"/>
                             <constraint firstItem="svx-yX-JrM" firstAttribute="bottom" secondItem="f3J-LF-3Nc" secondAttribute="bottom" constant="94" id="7Ir-9C-nBW"/>
-                            <constraint firstItem="bZ5-gd-z4p" firstAttribute="top" secondItem="svx-yX-JrM" secondAttribute="top" id="PFX-QF-27u"/>
-                            <constraint firstItem="f3J-LF-3Nc" firstAttribute="top" secondItem="bZ5-gd-z4p" secondAttribute="bottom" constant="56" id="UJ3-W0-NRa"/>
                             <constraint firstItem="f3J-LF-3Nc" firstAttribute="centerX" secondItem="ZNq-wf-BWc" secondAttribute="centerX" id="WgG-wn-A7S"/>
-                            <constraint firstItem="bZ5-gd-z4p" firstAttribute="trailing" secondItem="svx-yX-JrM" secondAttribute="trailing" id="ctJ-Xd-GBx"/>
+                            <constraint firstItem="svx-yX-JrM" firstAttribute="trailing" secondItem="89v-oi-KBE" secondAttribute="trailing" id="hvb-l4-SAV"/>
+                            <constraint firstItem="f3J-LF-3Nc" firstAttribute="top" secondItem="89v-oi-KBE" secondAttribute="bottom" constant="100" id="oYl-dF-tH8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fzA-Lp-yIe"/>
                     <connections>
-                        <outlet property="imageView" destination="EZM-jo-dH2" id="00G-7r-Ci0"/>
-                        <outlet property="scrollView" destination="bZ5-gd-z4p" id="gfU-Ey-8F4"/>
+                        <outlet property="imageView" destination="89v-oi-KBE" id="m5E-oy-2On"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BUa-7d-vfj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
